--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="about" id="about">
         <div class="container">
             <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
-                <img src="images/websiteMe.JPG" alt="">
+                <img src="../keithlwill.github.io/websiteMe.JPG" alt="">
             </div>
             <div class="about-details" data-aos="fade-left" data-aos-delay="600">
                 <div class="about-heading">
