rising sophomore, folders

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="about" id="about">
         <div class="container">
             <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
-                <img src="../keithlwill.github.io/websiteMe.JPG" alt="">
+                <img src="../keithlwill.github.io/images/websiteMe.JPG" alt="">
             </div>
             <div class="about-details" data-aos="fade-left" data-aos-delay="600">
                 <div class="about-heading">
@@ -66,7 +66,7 @@
                     <h6>Myself</h6>
                 </div>
                 <p>
-                    Hi! My name is Keith and I'm an incoming sophomore at Duke University.
+                    Hi! My name is Keith and I'm a rising sophomore at Duke University.
                     I'm intending to major in computer science. Right now, I'm preparing for a summer internship with Google as a STEP intern.
                     I'll be working with the Google Ads team, writing tests so that they can implement new features more efficiently.
                 </p>
