--- a/index.html
+++ b/index.html
@@ -279,6 +279,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://github.com/keithlwill/" target = "_blank" class = "icon-link">
+                        <i class="fab fa-github-square"></i>
+                    </a>
+                </li>
+                <li>
                     <a href="mailto: keith.will247@gmail.com"  class = "icon-link">
                         <i class="fas fa-envelope"></i>
                     </a>
