update resume link, internship desc, about me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
                 <li>
-                    <a href="https://drive.google.com/file/d/1if9hMMl1mQGi3hzhS1rVYgRv2x4wE0hA/view?usp=sharing" target="_blank" class="nav-link">Resume</a>
+                    <a href="https://drive.google.com/file/d/1Eq6LyaRToAeovqf4bredcEg-UA7mWesL/view?usp=sharing" target="_blank" class="nav-link">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -66,11 +66,12 @@
                     <h6>Myself</h6>
                 </div>
                 <p>
-                    Hi! My name is Keith and I'm a rising sophomore at Duke University, 
-                    intending to major in computer science. Right now, I'm working at a 
-                    virtual summer internship with Google as a STEP intern. My current focus 
-                    is completing a series of mini-projects that will help me hone my skills 
-                    in web development. When I'm not working, I like to watch anime, 
+                    Hi! My name is Keith and I'm a sophomore at Duke University, 
+                    intending to major in computer science. I just finished up a 
+                    virtual summer internship with Google as a STEP intern. I'm 
+                    currently on a grind, going to classes at school and working 
+                    out with the varsity track and field team. In my free time,
+                    I like to watch anime (currently watching Haikyuu!), 
                     play video games, and play basketball.
                 </p>
             </div>
@@ -90,11 +91,14 @@
                             Google                              
                         </h1>
                         <p>
-                            My current internship!
-                            I'm currently working on a series of mini-projects that are focused on improving web development skills.
-                            Each project focuses on an individual skill, like client side CSS/HTML, backend Java server programming, 
-                            various libraries, practicing test driven development, and more. After the mini projects are completed,
-                            I'll use the skills that I learned to develop a capstone project with a team.
+                            The first 5 weeks of the internship focused on improving web development skills. I made a personal portfolio
+                            site using HTML, CSS, JavaScript, and different Google APIs like Charts and Maps. The site also 
+                            includes a backend consisting of Java servlets and persistent storage using GCP Datastore.
+                            For the rest of the internship, me and a podmate developed a webapp with the intention of 
+                            addressing food related issues. I worked on an autocomplete interface that uses the Nutritionix API
+                            to enable a user to search a database of over 500,000 foods. When the user selects all of the food 
+                            they have eaten, I use the Google Charts API to visually show the user which foods are contributing
+                            to their total caloric intake, and let the user know if they've eaten too little or too much.
                         </p>
                     </li>
                 </ul>
