--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
                 <li>
-                    <a href="https://drive.google.com/file/d/1cXHQL8HayegfA1ykYRXCXzVsPjppmVIX/view?usp=sharing" target="_blank" class="nav-link">Resume</a>
+                    <a href="https://drive.google.com/file/d/1CN7n0c8G01jY_BcVaP5A4_O-i6r50Bh6/view?usp=sharing" target="_blank" class="nav-link">Resume</a>
                 </li>
             </ul>
         </nav>
         <div class="landing-text">
             <h1>Keith Williams</h1>
-            <h6>Sophomore @ Duke University</h6>
+            <h6>Junior @ Duke University</h6>
         </div>
     </header>
 
@@ -66,13 +66,13 @@
                     <h6>Myself</h6>
                 </div>
                 <p>
-                    Hi! My name is Keith and I'm a sophomore at Duke University, 
-                    intending to major in computer science. I just finished up a 
-                    virtual summer internship with Google as a STEP intern. I'm 
-                    currently on a grind, going to classes at school and working 
-                    out with the varsity track and field team. In my free time,
-                    I like to watch anime (currently watching Haikyuu!), 
-                    play video games, and play basketball.
+                    Hi! My name is Keith and I'm a rising junior at Duke University.
+                    I'm majoring in computer science and minoring in psychology.
+                    This summer, I'm working with Google as a STEP intern on the 
+                    TensorFlow.js team. My project is automating machine learning
+                    performance tests. I'm also on the track and field team at Duke!
+                    In my free time, I like to play video games, watch anime, and 
+                    hang with friends.
                 </p>
             </div>
         </div>
@@ -86,6 +86,19 @@
             </div>
             <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul>
+                    <li class="date" data-date="May 2021 - August 2021">
+                        <h1>
+                            Google                              
+                        </h1>
+                        <p>
+                            This summer's project was automating machine learning benchmarking! The TensorFlow.js team already had a 
+                            manual benchmarking tool, but there were a couple downsides to it. It required human interaction, and could
+                            be very time consuming. My job was to automate benchmarking, so that people don't have
+                            spend a lot of time configuring every detail of multiple tests and waiting around for results to come back. 
+                            I even set up a performance visualisation dashboard so that the TensorFlow team can view the performance of 
+                            different machine learning models over time, and catch bugs before TFJS versions are officially released.
+                        </p>
+                    </li>
                     <li class="date" data-date="May 2020 - August 2020">
                         <h1>
                             Google                              
@@ -301,7 +314,7 @@
         <div class="up" id="up">
             <i class = "fas fa-chevron-up"></i>
         </div>
-        <p>&copy; Keith Williams 2020 </p>
+        <p>&copy; Keith Williams 2021 </p>
     </footer>
 
 
