--- a/index.html
+++ b/index.html
@@ -45,32 +45,31 @@
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
                 <li>
-                    <a href="https://drive.google.com/file/d/1CN7n0c8G01jY_BcVaP5A4_O-i6r50Bh6/view?usp=sharing" target="_blank" class="nav-link">Resume</a>
+                    <a href="https://drive.google.com/file/d/15aufvPCiVrvjSmIGjCFpTQDWkJQeWTef/view?usp=sharing" target="_blank" class="nav-link">Resume</a>
                 </li>
             </ul>
         </nav>
         <div class="landing-text">
             <h1>Keith Williams</h1>
-            <h6>Junior @ Duke University</h6>
+            <h6>Senior @ Duke University</h6>
         </div>
     </header>
 
     <section class="about" id="about">
         <div class="container">
-            <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
+            <div class="profile-img" data-aos="fade-right" data-aos-delay="200">
                 <img src="images/websiteMe.JPG" alt="">
             </div>
-            <div class="about-details" data-aos="fade-left" data-aos-delay="600">
+            <div class="about-details" data-aos="fade-left" data-aos-delay="400">
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
                 </div>
                 <p>
-                    Hi! My name is Keith and I'm a rising junior at Duke University.
+                    Hi! My name is Keith and I'm a senior at Duke University.
                     I'm majoring in computer science and minoring in psychology.
-                    This summer, I'm working with Google as a STEP intern on the 
-                    TensorFlow.js team. My project is automating machine learning
-                    performance tests. I'm also on the track and field team at Duke!
+                    Summer 2022, I interned for Google on the Google Cloud Ordering 
+                    Team. I'm also on the track and field team at Duke!
                     In my free time, I like to play video games, watch anime, and 
                     hang with friends.
                 </p>
@@ -86,6 +85,17 @@
             </div>
             <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul>
+                    <li class="date" data-date="May 2022 - August 2022">
+                        <h1>
+                            Google                              
+                        </h1>
+                        <p>
+                            For my third and final Google internship, I made both an API and a UI for the Google Cloud Ordering Orchestration team.
+                            The API utilizes Java and an internal server framework to schedule and reschedule cloud provisioning operations.
+                            The UI utilizes Angular and TypeScript to make a frontend page that the oncall team can use to search for records, display
+                            their details/statuses, and reschedule them. 
+                        </p>
+                    </li>
                     <li class="date" data-date="May 2021 - August 2021">
                         <h1>
                             Google                              
